; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_visual.c_numbuf_pull.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_visual.c_numbuf_pull.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numbuf_i = common dso_local global i32 0, align 4
@numbuf = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @numbuf_pull to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @numbuf_pull() #0 {
  %1 = alloca i32, align 4
  store i32 1, i32* %1, align 4
  %2 = load i32, i32* @numbuf_i, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %15

4:                                                ; preds = %0
  %5 = load i64*, i64** @numbuf, align 8
  %6 = load i32, i32* @numbuf_i, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i64, i64* %5, i64 %7
  store i64 0, i64* %8, align 8
  %9 = load i64*, i64** @numbuf, align 8
  %10 = call i32 @atoi(i64* %9)
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* %1, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %4
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %4
  store i32 0, i32* @numbuf_i, align 4
  br label %15

15:                                               ; preds = %14, %0
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i32 @atoi(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
